--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="overflow-hidden"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
